# logic-gates-playground

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  main
.codex/environments/: environment.toml
assets/fonts/: LICENSES.md  README.md
docs/: architecture.md  smoke-test.md
examples/: README.md  and_gate.circ  half_adder.circ
include/app/: Application.h  Config.h
include/core/: CustomGate.h  CustomGateData.h  CustomGateRegistry.h  DerivedGates.h  GatePin.h  GateSymbolGeometry.h  InputSource.h  LogicGate.h  OutputSink.h  Wire.h
include/simulation/: CircuitSimulator.h
include/ui/: CommandPalette.h  CommandStack.h  DesignTokens.h  EditorCommand.h  EditorSelection.h  GateFactory.h  GateGeometry.h  GatePainter.h  GateRenderer.h  InputHandler.h  InspectorPanel.h  InteractionController.h  InteractionHelpers.h  PaletteManager.h  SceneRenderer.h  Toolbar.h  UIManager.h  VisualEffects.h  WirePainter.h  WireRenderer.h  WireRouter.h
include/ui/commands/: AddGateCommand.h  AddWireCommand.h  DeleteSelectionCommand.h  DuplicateSelectionCommand.h  MoveGatesCommand.h
src/: app.c  app.h  app_analysis.c  app_analysis.h  app_canvas.c  app_canvas.h  app_commands.c  app_commands.h  app_internal.h  circuit_file.c  circuit_file.h  circuit_layout.c  circuit_layout.h  draw_util.c  draw_util.h  editor_input.c  editor_input.h  logic.c  logic.h  main.c  source_watch.c  source_watch.h  topbar.c  topbar.h  ui.h  ui_geometry.c  ui_geometry.h  ui_hit.c  ui_internal.h  ui_render.c  workspace_layout.c  workspace_layout.h
src/app/: Application.cpp  Config.cpp  main.cpp
src/core/: CustomGate.cpp  CustomGateRegistry.cpp  DerivedGates.cpp  GatePin.cpp  GateSymbolGeometry.cpp  InputSource.cpp  LogicGate.cpp  OutputSink.cpp  Wire.cpp
src/simulation/: CircuitSimulator.cpp
src/ui/: CommandPalette.cpp  CommandStack.cpp  DesignTokens.cpp  GateFactory.cpp  GateGeometry.cpp  GatePainter.cpp  GateRenderer.cpp  InputHandler.cpp  InspectorPanel.cpp  InteractionController.cpp  PaletteManager.cpp  SceneRenderer.cpp  Toolbar.cpp  UIManager.cpp  VisualEffects.cpp  WirePainter.cpp  WireRenderer.cpp  WireRouter.cpp
src/ui/commands/: AddGateCommand.cpp  AddWireCommand.cpp  DeleteSelectionCommand.cpp  DuplicateSelectionCommand.cpp  MoveGatesCommand.cpp
tests/: test_main.c  tests.cpp
